--- a/pony/G4/S6.md
+++ b/pony/G4/S6.md
@@ -4,239 +4,240 @@ layout: backpony
 filename: ponyG4S2
 --- 
 # S6E01 
-## The Return of Harmony, part 1
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Friendship is Magic, part 1
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E02 
-## The Return of Harmony, part 2
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Friendship is Magic, part 2
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E03
-## Lesson Zero
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## The Ticket Master
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E04
-## Luna Eclipsed
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Applebuck Season
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E05
-## Sisterhooves Social
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Griffon the Brush Off
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E06
-## The Cutie Pox
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Boast Busters
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E07
-## May the Best Pet Wins!
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Dragonshy
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E08
-## The Mysterious Mare Do Well
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Look Before You Sleep
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E09
-## Sweet and Elite
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Bridle Gossip
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E10
-## Secret of My Excess
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Swarm of the Century
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E11
-## Hearth's Warming Eve
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Winter Warp up
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E12
-## Family Appreciation Day
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Call of the Cutie
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E13
-## Baby Cakes
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Fall Weather Friends
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E14
-## The Last Roundup
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Suited For Success
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E15
-## The Super Speed Cider Squeezy 6000
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Feeling Pinkie Keen
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E16
-## Read It and Weep
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Sonic Rainboom
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E17
-## Hearts and Hooves Day
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Stare Master
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E18
-## A Friend in Deed
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## The Show Stoppers
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E19
-## APutting Your Hoof Down
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## A Dog and Pony show
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
  
 # S6E20 
-## It's About time
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Green Isn't Your Color
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E21 
-## Dragon quest
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Over a Barrel
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E22 
-## Hurricane Fluttershy
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## A Bird in the Hoof
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E23 
-## Ponyville Confidential
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## The Cutie Mark Chronicles
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 
 
 # S6E24
-## MMMystery on the Friendship Express
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Owl's Well That Ends Well
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
     
 # S6E25
-## A Canterlot Wedding - Part 1
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## Party of One
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
 [點擊此處]()
 
 # S6E26
-## A Canterlot Wedding - Part 2
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)
-[![]()](/revision/latest/scale-to-width-down/1000)<br>
+## The Best Night Ever
+![]()
+![]()
+![]()
+![]()<br>
 ## 進入小馬國
-[點擊此處]()
+[點擊此處]()    
+
 # 前往下一季
-[點擊此處](https://linbei9487.github.io/pony/G4/S7)    
+[點擊此處]()https://linbei9487.github.io/pony/G4/S7)    
